test: 추가 Private 메소드 테스트 코드
void testPrivateMethod(Class<?> testClass, String testMethodName, List<List<Object>> testCase)